--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "server": "nodemon app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm run build --prefix client"
+    "build": "npm run build --prefix client",
+    "heroku-prebuild": "npm install --prefix client"
   },
   "author": "",
   "license": "ISC",
