--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "node app",
-    "server": "nodemon app.js",
+    "start": "node dist/app.js",
+    "server": "nodemon app.ts",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm run build --prefix client",
+    "build": "npm run build --prefix client && rimraf -r dist && tsc",
     "heroku-prebuild": "npm install --prefix client"
   },
   "author": "",
@@ -27,8 +27,14 @@
     "sqlite3": "^5.1.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.3",
     "concurrently": "^7.4.0",
     "prettier": "2.7.1",
-    "sequelize-cli": "^6.5.1"
+    "rimraf": "^3.0.2",
+    "sequelize-cli": "^6.5.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
