--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
+    "@mui/x-data-grid": "^5.17.8",
     "@mui/x-date-pickers-pro": "^5.0.5",
     "@tanstack/react-query": "^4.12.0",
     "@testing-library/jest-dom": "^5.16.5",
