--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,13 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "algoliasearch": "^4.14.2",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-instantsearch-hooks-web": "^6.38.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
