--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/x-data-grid": "^5.17.8",
     "@mui/x-date-pickers-pro": "^5.0.5",
     "@tanstack/react-query": "^4.12.0",
+    "@tanstack/react-query-devtools": "^4.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
