--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
