adding sanitize and handling rich editor text display

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/sanitize-html": "^2.6.2",
     "algoliasearch": "^4.14.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "sanitize-html": "^2.7.3",
     "sequelize": "^6.24.0",
     "sqlite3": "^5.1.2"
   },
