--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "@types/styled-components": "^5.1.26",
     "algoliasearch": "^4.14.2",
     "date-fns": "^2.29.3",
+    "i18next": "^22.0.4",
     "ky": "^0.32.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-i18next": "^12.0.0",
     "react-instantsearch-hooks-web": "^6.38.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.2",
